--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,14 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Geist Sans", Helvetica, sans-serif;
+  font-weight: 200;
+}
+
+.geist-mono {
+  font-family: "Geist Mono", monospace;
+}
+
+.geist-sans {
+  font-family: "Geist Sans", sans-serif;
 }
